# space-efficient-sumcheck

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: explanation.rs  multilinear_extensions.rs  reduce_sum_benches.rs  run_benches.sh  stream.rs  sumcheck.rs
benches/lag-poly-benches/: Cargo.toml  run_benches.sh
benches/src/: main.rs
benches/sumcheck-benches/: Cargo.toml  run_benches.sh
custom_benches/: Cargo.toml  run_benches.sh
custom_benches/src/: main.rs
lag-poly-benches/: Cargo.toml  run_benches.sh
lag-poly-benches/src/: main.rs
src/: field_32.rs  field_32_from.rs  field_32_ops.rs  lib.rs  proof.rs  space_prover.rs  time_prover.rs  tradeoff_prover.rs
src/fields/: mod.rs
src/hypercube/: hypercube.rs  hypercube_indices.rs  hypercube_member.rs  mod.rs
src/interpolation/: lagrange_polynomial.rs  mod.rs
src/messages/: mod.rs  verifier_messages.rs
src/multilinear/: mod.rs  proof.rs  prove.rs  sumcheck.rs
src/multilinear_extensions/: mod.rs
src/multilinear_product/: mod.rs  prove.rs  prover.rs  sumcheck.rs
src/order_strategy/: mod.rs  order_strategy.rs
src/prover/: mod.rs  prover.rs
src/provers/: blended_prover.rs  blendy_product_prover.rs  blendy_prover.rs  evaluation_stream.rs  hypercube.rs  interpolation.rs  lagrange_polynomial.rs  mod.rs  prover.rs  space_prover.rs  test_helpers.rs  time_product_prover.rs  time_prover.rs  tradeoff_prover.rs  verifier_messages.rs
src/streaming_sumcheck/: mod.rs
src/streams/: mod.rs  stream.rs  stream_iterator.rs
sumcheck-benches/: Cargo.toml  run_benches.sh
workflows/: aws_bench_runner.sh
(+107 files in other folders)
