[package]
name = "space-efficient-sumcheck"
version = "0.0.2"
authors = [
    "Giacomo Fenzi <giacomo.fenzi@epfl.ch>",
    "Elisabetta Fedele <efedele@ethz.ch>",
    "Andrew Zitek-Estrada <andrew.zitek@epfl.ch>",
]
description = "TODO"
repository = "https://github.com/compsec-epfl/space-efficient-sumcheck"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2021"

[dependencies]
ark-ff = "0.4.0"
ark-poly = "0.4.0"
ark-std ="0.4.0"
ark-serialize = "0.4.2"
num-bigint = "0.4"
num-traits = "0.2"
zeroize = "1.8.1"

[dev-dependencies]
criterion = "0.4"

[features]
simd = []

[[bench]]
harness = false
name = "reduce_sum_benches"