[package]
name = "space-efficient-sumcheck"
version = "0.0.2"
authors = ["arkworks maintainers"]
description = "TODO"
repository = "https://github.com/compsec-epfl/space-efficient-sumcheck"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-std ="0.5.0"

[[bench]]
name = "explanation"
harness = false
